integration_tests/codegen_fail/fail/scalar/derive_input/impl_invalid_url.stderr
error: Invalid URL: relative URL without a base
 --> fail/scalar/derive_input/impl_invalid_url.rs:3:37
  |
3 | #[graphql_scalar(specified_by_url = "not an url", parse_token(i32))]
  |                                     ^^^^^^^^^^^^

error[E0412]: cannot find type `ScalarSpecifiedByUrl` in this scope
 --> fail/scalar/derive_input/impl_invalid_url.rs:6:6
  |
6 | impl ScalarSpecifiedByUrl {
  |      ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: the `Self` constructor can only be used with tuple or unit structs
  --> fail/scalar/derive_input/impl_invalid_url.rs:12:12
   |
12 |         Ok(Self)
   |            ^^^^
